diplom - part2 - 1st commit -fixGit