@@ -8,10 +8,12 @@ import ru.practicum.statistics.mapper.HitMapper;
 import ru.practicum.statistics.repository.StatisticRepository;
 import ru.practicum.statistics.dto.HitDto;
 import ru.practicum.statistics.model.Hit;
+import ru.practicum.statistics.utility.Constants;
 
 import java.math.BigInteger;
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -29,41 +31,22 @@ public class StatisticsServiceImpl implements StatisticsService {
 
     @Override
     public List<HitDto> getStatistics(LocalDateTime startTime, LocalDateTime endTime, String[] uriArray, boolean unique) {
-        List<Object> list = null;
-        List<HitDto> listHits = new ArrayList<>();
-        List<HitDto> resultListHits = new ArrayList<>();
+        List<HitDto> list;
+
         if (unique) {
-            list = statisticRepository.findAllHitsWithUniqueIp(startTime, endTime);
-            list.forEach(obj -> {
-                Object[] array = (Object[]) obj;
-                array[2] = BigInteger.valueOf(1);
-            });
+            list = statisticRepository.countTotalperUriUniqueIp(startTime, endTime);
+
         } else {
-            list = statisticRepository.findAllHits(startTime, endTime);
+            list = statisticRepository.countTotalperUri(startTime, endTime);
         }
-        list.forEach(obj -> {
-            Object[] array = (Object[]) obj;
-            HitDto hitDtoWithStat = new HitDto();
-            hitDtoWithStat.setApp((String) array[0]);
-            hitDtoWithStat.setUri((String) array[1]);
-            hitDtoWithStat.setHits((BigInteger) array[2]);
-            listHits.add(hitDtoWithStat);
-        });
-        if (uriArray != null && listHits.size() > 0) {
-            List<String> uriList = new ArrayList<>(Arrays.asList(uriArray));
-            for (HitDto hitDto : listHits) {
-                if (uriList.contains(hitDto.getUri())) {
-                    resultListHits.add(hitDto);
-                }
-            }
+
+        if (uriArray.length != 0) {
+            List<String> urisList = List.of(uriArray);
+            list = list.stream().filter(v -> urisList.contains(v.getUri())).
+                    collect(Collectors.toList());
         }
-        Collections.sort(resultListHits, new Comparator<HitDto>() {
-            @Override
-            public int compare(HitDto o1, HitDto o2) {
-                return o2.getHits().compareTo(o1.getHits());
-            }
-        });
-        log.info("Выведен список Hits: {}", resultListHits);
-        return resultListHits;
+
+        log.info("Выведен список Hits: {}", list);
+        return list;
     }
 }
